objects/Participante__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participantes</relationshipLabel>
        <relationshipName>Participantes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Dia_da_participacao__c</fullName>
        <label>Dia da participação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Promocao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Participantes</relationshipLabel>
        <relationshipName>Participantes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Participantes</relationshipLabel>
        <relationshipName>Participantes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Participante</label>
    <nameField>
        <displayFormat>PA#{000000}</displayFormat>
        <label>Participante</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participantes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>